# substrate-lucky-pot

lucky-pot-node/: Cargo.toml  README.md
lucky-pot-node/runtime/: Cargo.toml
lucky-pot-node/runtime/src/: lib.rs  luckypot.rs
lucky-pot-node/runtime/wasm/: Cargo.toml
lucky-pot-node/src/: main.rs
lucky-pot-ui/: package-lock.json
lucky-pot-ui/src/: app.jsx
