[profile.release]
panic = 'unwind'

[build-dependencies]
vergen = '3'

[dependencies]
error-chain = '0.12'
exit-future = '0.1'
futures = '0.1'
hex-literal = '0.1'
log = '0.4'
parity-codec = '3.0'
parking_lot = '0.7.1'
slog = '^2'
tokio = '0.1'
trie-root = '0.11.0'

[dependencies.basic-authorship]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-basic-authorship'
rev = 'f429a0cb8983cebe380d1cbc7aaf753db0aeba55'

[dependencies.consensus]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-consensus-aura'
rev = 'f429a0cb8983cebe380d1cbc7aaf753db0aeba55'

[dependencies.ctrlc]
features = ['termination']
version = '3.0'

[dependencies.inherents]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-inherents'
rev = 'f429a0cb8983cebe380d1cbc7aaf753db0aeba55'

[dependencies.network]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-network'
rev = 'f429a0cb8983cebe380d1cbc7aaf753db0aeba55'

[dependencies.node-executor]
git = 'https://github.com/paritytech/substrate.git'
rev = 'f429a0cb8983cebe380d1cbc7aaf753db0aeba55'

[dependencies.node-template-runtime]
path = 'runtime'

[dependencies.primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-primitives'
rev = 'f429a0cb8983cebe380d1cbc7aaf753db0aeba55'

[dependencies.sr-io]
git = 'https://github.com/paritytech/substrate.git'
rev = 'f429a0cb8983cebe380d1cbc7aaf753db0aeba55'

[dependencies.substrate-cli]
git = 'https://github.com/paritytech/substrate.git'
rev = 'f429a0cb8983cebe380d1cbc7aaf753db0aeba55'

[dependencies.substrate-client]
git = 'https://github.com/paritytech/substrate.git'
rev = 'f429a0cb8983cebe380d1cbc7aaf753db0aeba55'

[dependencies.substrate-executor]
git = 'https://github.com/paritytech/substrate.git'
rev = 'f429a0cb8983cebe380d1cbc7aaf753db0aeba55'

[dependencies.substrate-service]
git = 'https://github.com/paritytech/substrate.git'
rev = 'f429a0cb8983cebe380d1cbc7aaf753db0aeba55'

[dependencies.transaction-pool]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-transaction-pool'
rev = 'f429a0cb8983cebe380d1cbc7aaf753db0aeba55'

[package]
authors = ['Parity Technologies <admin@parity.io>']
build = 'build.rs'
edition = '2018'
name = 'node-template'
version = '0.9.0'

[[bin]]
name = 'lucky-pot-node'
path = 'src/main.rs'
