[profile.release]
lto = true
panic = 'abort'

[lib]
crate-type = ['cdylib']
[dependencies.node-template-runtime]
default-features = false
path = '..'

[features]
default = []
std = ['node-template-runtime/std']

[package]
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'
name = 'node-template-runtime-wasm'
version = '0.9.0'

[workspace]
members = []
